--- a/src/index.css
+++ b/src/index.css
@@ -121,11 +121,26 @@ body {
 }
 
 .product-image {
-  width: 100%;
   max-width: 25rem;
   height: 24rem;
   border-radius: 1rem;
   margin-bottom: 3.8rem;
+}
+
+@media screen and (max-width: 800px) {
+  .product-image {
+    width: 100%;
+    max-width: 213px;
+    height: auto;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .product-image {
+    width: 100%;
+    max-width: 327px;
+    height: auto;
+  }
 }
 
 .categorys {
@@ -168,6 +183,24 @@ body {
   position: absolute;
   margin-top: 22rem;
   margin-left: 4rem;
+}
+
+.border-red {
+  border: 2px solid red;
+}
+
+@media screen and (max-width: 800px) {
+  .card {
+    margin-top: 190px;
+    margin-left: 20px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .card {
+    margin-top: 190px;
+    margin-left: 80px;
+  }
 }
 
 .card.added {
@@ -214,7 +247,7 @@ body {
   font-weight: 600;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 450px) {
   .container {
     padding-left: 2.4rem;
     padding-right: 2.4rem;
@@ -235,7 +268,7 @@ body {
   }
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 800px) {
   .grid-container {
     grid-template-columns: repeat(1, 1fr);
   }
@@ -248,6 +281,20 @@ body {
   border: 1px solid transparent;
   background-color: var(--color-white);
   padding: 2.4rem;
+}
+
+@media screen and (max-width: 800px) {
+  .your-name {
+    width: 68.8rem;
+    height: 54.2rem;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .your-name {
+    width: 34.2rem;
+    height: 52.7rem;
+  }
 }
 
 .your-text {
@@ -329,6 +376,22 @@ body {
   margin-bottom: 2.4rem;
 }
 
+@media screen and (max-width: 800px) {
+  .neutral {
+    width: 100%;
+    max-width: 640px;
+    height: 52px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .neutral {
+    width: 100%;
+    max-width: 279px;
+    height: 52px;
+  }
+}
+
 .neutral-img {
   width: 2rem;
   height: 2rem;
@@ -377,6 +440,32 @@ body {
   width: 59.2rem;
   height: 68.5rem;
   box-shadow: 0 4px 1rem rgba(0, 0, 0, 0.3);
+}
+
+@media screen and (max-width: 800px) {
+  .modal-open {
+    width: 688px;
+    height: 685px;
+  }
+
+  .modal-title {
+    width: 608px;
+    height: 339px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .modal-open {
+    width: 375px;
+    height: 717px;
+    padding: 2.4rem;
+  }
+
+  .modal-title {
+    width: 85%;
+    max-width: 327px;
+    height: auto;
+  }
 }
 
 .confirmed-image {
